@@ -4482,8 +4482,7 @@ sub handle_configure
 		       'MAKEFILE-DEPS'
 		       => "@rewritten",
 		       'CONFIG-MAKEFILE'
-		       => ((($relative_dir eq '.') ? '$@' : '$(subdir)/$@')
-			   . $colon_infile),
+		       => ($relative_dir eq '.') ? '$@' : '$(subdir)/$@',
 		       'MAKEFILE-IN'
 		       => $infile,
 		       'MAKEFILE-IN-DEPS'
