@@ -111,6 +111,7 @@ condman2.test \
 conf2.test \
 confdeps.test \
 confdist.test \
+conff.test \
 confh.test \
 confh4.test \
 config.test \
