@@ -9,7 +9,9 @@ Bugs fixed in 1.7.3b:
 * Diagnose trailing backslashes on last line of Makefile.am.
 * Diagnose whitespace following trailing backslashes.
 * Minor documentation fixes.
-* Multiple tests are now correctly supported in DEJATOOL.
+* Multiple tests are now correctly supported in DEJATOOL. (PR/388)
+* Fix rebuilt rules for AC_CONFIG_FILES([Makefile:Makefile.in:Makefile.bot])
+  Makefiles. (PR/389)
 
 Bugs fixed in 1.7.3:
 * Fix stamp files numbering (when using multiple AC_CONFIG_HEADERS).
