@@ -1,3 +1,12 @@
+2003-04-19  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	Fix for PR automake/389:
+	* automake.in (handle_configure): Don't put $colon_infile in
+	CONFIG-MAKEFILE.
+	* tests/conff.test: New file.
+	* tests/Makefile.am (TESTS): Add conff.test.
+	Reported by Alexander Turbov.
+
 2003-04-18  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* configure.in: Bump version to 1.7.3c.
